[tool.poetry]
name = "libro"
version = "0.1.0"
description = "A django based library and bookmanagement system"
authors = ["Lloyd Meins <dev@lloydmeins.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
